Button Maps Tell

--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
 
 <head>
   <meta charset="UTF-8">
@@ -46,7 +46,7 @@
             <div class="nav__list__wrapper">
 
               <li><a class="nav__link" href="./index.html">Home</a></li>
-              <li><a class="nav__link" href="./about.html">La Pizzeria</a></li>
+              <!-- <li><a class="nav__link" href="./about.html">La Pizzeria</a></li> -->
               <li><a class="nav__link" href="./contact.html">Contattaci</a></li>
               <li><a href="./menu.html" class="btn primary-btn">Menu</a></li>
             </div>
@@ -73,7 +73,7 @@
         </div>
         <div class="storeInfo__item">
           <div class="storeInfo__icon">
-            <img src="./images/address-icon.svg" alt="clock icon">
+            <img src="./images/address-icon.svg" alt="clock icon" >
           </div>
           <h3 class="storeInfo__title">
             Aragona, AG
@@ -81,6 +81,9 @@
           <p class="storeInfo__text">
             Via Carlo Darwin, 28
           </p>
+          <br>
+          <br>
+          <a href="https://goo.gl/maps/sajA7cfbjVqaVTSKA" class="btn primary-btn">Apri su Maps</a>
         </div>
         <div class="storeInfo__item">
           <div class="storeInfo__icon">
@@ -92,6 +95,9 @@
           <p class="storeInfo__text">
             Chiamaci Adesso
           </p>
+          <br>
+          <br>
+          <a href="tel:3246616822" class="btn primary-btn">Chiamaci Ora</a>
         </div>
       </div>
     </div>
