--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="nav__list__wrapper">
 
               <li><a class="nav__link" href="./index.html">Home</a></li>
-              <li><a class="nav__link" href="./about.html">La Pizzeria</a></li>
+              <!-- <li><a class="nav__link" href="./about.html">La Pizzeria</a></li> -->
               <li><a class="nav__link" href="./contact.html">Contattaci</a></li>
               <li><a href="./menu.html" class="btn primary-btn">Menu</a></li>
             </div>
@@ -78,7 +78,7 @@
         </div>
         <div class="hero__right" data-aos="fade-right">
           <div class="hero__imgWrapper">
-            <img src="./images/heroImg.png" alt="image">
+            <img src="./images/LOgoGrande.svg" alt="image">
           </div>
         </div>
       </div>
@@ -102,7 +102,7 @@
         </div>
         <div class="storeInfo__item">
           <div class="storeInfo__icon">
-            <img src="./images/address-icon.svg" alt="clock icon">
+            <img src="./images/address-icon.svg" alt="clock icon" >
           </div>
           <h3 class="storeInfo__title">
             Aragona, AG
@@ -110,6 +110,9 @@
           <p class="storeInfo__text">
             Via Carlo Darwin, 28
           </p>
+          <br>
+          <br>
+          <a href="https://goo.gl/maps/sajA7cfbjVqaVTSKA" class="btn primary-btn" >Apri su Maps</a>
         </div>
         <div class="storeInfo__item">
           <div class="storeInfo__icon">
@@ -121,11 +124,15 @@
           <p class="storeInfo__text">
             Chiamaci Adesso
           </p>
+          <br>
+          <br>
+          <a href="tel:3246616822" class="btn primary-btn" >Chiamaci Ora</a>
         </div>
       </div>
     </div>
   </section>
   <!-- End Store Info Section -->
+
   <!-- Our Specials Section -->
   <section id="ourSpecials" data-aos="fade-up">
     <div class="container">
@@ -174,6 +181,7 @@
     </div>
   </section>
   <!-- End Our Specials Section -->
+
   <!-- Top Dishes -->
   <section id="dishGrid" data-aos="fade-up">
     <div class="container">
@@ -218,7 +226,9 @@
     </div>
   </section>
   <!-- End Top Dishes -->
+
   <!-- Discount Section -->
+  <!--
   <section id="discount" data-aos="fade-up">
     <div class="container">
       <div class="discount__wrapper">
@@ -245,8 +255,11 @@
       </div>
     </div>
   </section>
+  -->
   <!-- End Discount Section -->
+
   <!-- Events Media -->
+  <!--
   <section id="eventsMedia" data-aos="fade-up">
     <div class="container">
       <div class="eventsMedia__wrapper">
@@ -262,7 +275,9 @@
       </div>
     </div>
   </section>
+  -->
   <!-- End Events Media -->
+
   <!-- Why Us section -->
   <section id="whyUs">
     <div class="container">
