--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
     </div>
   </div>
   <!-- End Nav Section -->
+
   <!-- Hero Section -->
   <section id="hero">
     <div class="container">
@@ -66,9 +67,9 @@
 
             <h1 class="hero__heading">Titolo Principale</h1>
             <p class="hero__info">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-              ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-              laboris nisi ut aliquip ex ea commodo consequat.
+              Tutto ebbe inizio molti anni fa, con una sfida buttata lì per caso. Poi la passione per quel disco di
+              pasta e l' esigenza di imparare un mestiere, ha fatto sì che oggi si realizzasse, con non pochi sacrifici,
+              un progetto diventato realtà.
             </p>
             <div class="button__wrapper">
               <a href="./menu.html" class="btn primary-btn">Guarda il Menu</a>
@@ -85,6 +86,7 @@
     </div>
   </section>
   <!-- End Hero Section -->
+
   <!-- Store Info Section -->
   <section id="storeInfo" data-aos="fade-up">
     <div class="container">
@@ -108,25 +110,25 @@
             Aragona, AG
           </h3>
           <p class="storeInfo__text">
-            Via Carlo Darwin, 28
+            Via Enrico La Loggia, 20
           </p>
           <br>
           <br>
-          <a href="https://goo.gl/maps/sajA7cfbjVqaVTSKA" class="btn primary-btn" >Apri su Maps</a>
+          <a href="https://goo.gl/maps/gVg9PVGz4qFqjuDx9" class="btn primary-btn" >Apri su Maps</a>
         </div>
         <div class="storeInfo__item">
           <div class="storeInfo__icon">
             <img src="./images/phone-icon.svg" alt="clock icon">
           </div>
           <h3 class="storeInfo__title">
-            +39 123 123 1234
+            +39 334 346 0259
           </h3>
           <p class="storeInfo__text">
             Chiamaci Adesso
           </p>
           <br>
           <br>
-          <a href="tel:3246616822" class="btn primary-btn" >Chiamaci Ora</a>
+          <a href="tel:3343460259" class="btn primary-btn" >Chiamaci Ora</a>
         </div>
       </div>
     </div>
@@ -291,10 +293,12 @@
             Perché scegliere le nostre pizze
           </h2>
           <p class="whyUs__text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-            ut labore et dolore magna aliqua.
+            L' utilizzo di materie prime di qualità, con l'uso di farine poco raffinate di tipo 1 e 2 con germe
+            di grano, garantisce l'ottimo risultato del prodotto "Pizza". Oltre alla cottura delle pizze nel forno
+            a legna con l'uso esclusivo di legna di faggio certificata.
           </p>
         </div>
+        <!--
         <div class="whyUs__right" data-aos="fade-left">
           <div class="whyUs__items__wrapper">
             <div class="whyUs__item">
@@ -323,6 +327,7 @@
             </div>
           </div>
         </div>
+        -->
       </div>
     </div>
   </section>
@@ -337,8 +342,9 @@
             <img src="./images/logo.svg" alt="l'angolo della pizza. logo">
           </div>
           <p class="footer__desc">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-            ut labore et dolore magna aliqua.
+            Tutto ebbe inizio molti anni fa, con una sfida buttata lì per caso. Poi la passione per quel disco di
+            pasta e l' esigenza di imparare un mestiere, ha fatto sì che oggi si realizzasse, con non pochi sacrifici,
+            un progetto diventato realtà.
           </p>
           <div class="footer__socials">
             <h4 class="footer__socials__title">Seguici sui nostri Social</h4>
@@ -346,8 +352,8 @@
               <li>
                 <a href="https://it-it.facebook.com/" target="_blank">
                   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                    stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round"
-                    class="feather feather-facebook">
+                       stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round"
+                       class="feather feather-facebook">
                     <path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z" />
                   </svg>
                 </a>
@@ -355,8 +361,8 @@
               <li>
                 <a href="https://www.instagram.com/" target="_blank">
                   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                    stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round"
-                    class="feather feather-instagram">
+                       stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round"
+                       class="feather feather-instagram">
                     <rect x="2" y="2" width="20" height="20" rx="5" ry="5" />
                     <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z" />
                     <line x1="17.5" y1="6.5" x2="17.51" y2="6.5" />
@@ -378,13 +384,7 @@
               <a href="./menu.html">Menu</a>
             </li>
             <li>
-              <a href="./about.html">La Pizzeria</a>
-            </li>
-            <li>
               <a href="./contact.html">Contattaci</a>
-            </li>
-            <li>
-              <a href="#">Privacy Policy</a>
             </li>
           </ol>
         </div>
@@ -394,13 +394,13 @@
           </h3>
           <ol class="footer__text">
             <li>
-              <a href="#">+39 123 123 1234</a>
+              <a href="tel:3343460259">334 346 0259</a>
             </li>
             <li>
-              <a href="#">contatti@angolodellapizza.com</a>
+              <a href="mailto: langolodellapizza20@libero.it">langolodellapizza20@libero.it</a>
             </li>
             <li>
-              <a href="#">Via Carlo Darwin, 28, Aragona(AG), 92021</a>
+              <a href="https://goo.gl/maps/gVg9PVGz4qFqjuDx9">Via Enrico La Loggia, 20, Aragona</a>
             </li>
           </ol>
         </div>
