--- a/contact.html
+++ b/contact.html
@@ -56,6 +56,7 @@
     </div>
   </div>
   <!-- End Nav Section -->
+
   <!-- Store Info Section -->
   <section id="storeInfo" data-aos="fade-up">
     <div class="container">
@@ -79,30 +80,31 @@
             Aragona, AG
           </h3>
           <p class="storeInfo__text">
-            Via Carlo Darwin, 28
+            Via Enrico La Loggia, 20
           </p>
           <br>
           <br>
-          <a href="https://goo.gl/maps/sajA7cfbjVqaVTSKA" class="btn primary-btn">Apri su Maps</a>
+          <a href="https://goo.gl/maps/gVg9PVGz4qFqjuDx9" class="btn primary-btn" >Apri su Maps</a>
         </div>
         <div class="storeInfo__item">
           <div class="storeInfo__icon">
             <img src="./images/phone-icon.svg" alt="clock icon">
           </div>
           <h3 class="storeInfo__title">
-            +39 123 123 1234
+            +39 334 346 0259
           </h3>
           <p class="storeInfo__text">
             Chiamaci Adesso
           </p>
           <br>
           <br>
-          <a href="tel:3246616822" class="btn primary-btn">Chiamaci Ora</a>
+          <a href="tel:3343460259" class="btn primary-btn" >Chiamaci Ora</a>
         </div>
       </div>
     </div>
   </section>
   <!-- End Store Info Section -->
+
   <!-- Footer -->
   <footer>
     <div class="container">
@@ -112,8 +114,9 @@
             <img src="./images/logo.svg" alt="l'angolo della pizza. logo">
           </div>
           <p class="footer__desc">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-            ut labore et dolore magna aliqua.
+            Tutto ebbe inizio molti anni fa, con una sfida buttata lì per caso. Poi la passione per quel disco di
+            pasta e l' esigenza di imparare un mestiere, ha fatto sì che oggi si realizzasse, con non pochi sacrifici,
+            un progetto diventato realtà.
           </p>
           <div class="footer__socials">
             <h4 class="footer__socials__title">Seguici sui nostri Social</h4>
@@ -153,13 +156,7 @@
               <a href="./menu.html">Menu</a>
             </li>
             <li>
-              <a href="./about.html">La Pizzeria</a>
-            </li>
-            <li>
               <a href="./contact.html">Contattaci</a>
-            </li>
-            <li>
-              <a href="#">Privacy Policy</a>
             </li>
           </ol>
         </div>
@@ -169,13 +166,13 @@
           </h3>
           <ol class="footer__text">
             <li>
-              <a href="#">+39 123 123 1234</a>
+              <a href="tel:3343460259">334 346 0259</a>
             </li>
             <li>
-              <a href="#">contatti@angolodellapizza.com</a>
+              <a href="mailto: langolodellapizza20@libero.it">langolodellapizza20@libero.it</a>
             </li>
             <li>
-              <a href="#">Via Carlo Darwin, 28, Aragona(AG), 92021</a>
+              <a href="https://goo.gl/maps/gVg9PVGz4qFqjuDx9">Via Enrico La Loggia, 20, Aragona</a>
             </li>
           </ol>
         </div>
