--- a/menu.html
+++ b/menu.html
@@ -165,7 +165,7 @@
             <h3 class="dishGrid__item__price">€16</h3>
             <div class="dishGrid__item__text">
               <p>
-                Pomodoro, Fiordilatte, Bacon, Cipolla, Provola
+                Pomodoro, Fiordilatte, Bacon, Cipolla, Provola, Provola Affumicata, Origano
               </p>
             </div>
           </div>
@@ -221,7 +221,7 @@
             <h3 class="dishGrid__item__price">€6</h3>
             <div class="dishGrid__item__text">
               <p>
-                Pomodoro, Fiordilatte, Prosciutto Cotto, Würstel, Origano
+                Pomodoro, Fiordilatte, Prosciutto Cotto, Origano
               </p>
             </div>
           </div>
@@ -261,7 +261,7 @@
             <h3 class="dishGrid__item__price">€18</h3>
             <div class="dishGrid__item__text">
               <p>
-                Fiordilatte, Guanciale, Pecorino Cotto, Tuorlo d'Uovo, Pepe Nero, Olio Evo, Basilico
+                Fiordilatte, Guanciale, Pecorino, Tuorlo d'Uovo, Pepe Nero, Olio Evo, Basilico
               </p>
             </div>
           </div>
@@ -278,7 +278,7 @@
             </h3>
             <h3 class="dishGrid__item__price">€8</h3>
             <h3 class="dishGrid__item__price"> / </h3>
-            <h3 class="dishGrid__item__price">€14</h3>
+            <h3 class="dishGrid__item__price">€18</h3>
             <div class="dishGrid__item__text">
               <p>
                 Bufala, Ciliegino, Rucola, Crudo, Scaglie, Glassa
@@ -318,7 +318,7 @@
             </h3>
             <h3 class="dishGrid__item__price">€6</h3>
             <h3 class="dishGrid__item__price"> / </h3>
-            <h3 class="dishGrid__item__price">€18</h3>
+            <h3 class="dishGrid__item__price">€14</h3>
             <div class="dishGrid__item__text">
               <p>
                 Pomodoro, Fiordilatte, Spianata Piccante, Origano
@@ -441,7 +441,7 @@
             <h3 class="dishGrid__item__price">€14</h3>
             <div class="dishGrid__item__text">
               <p>
-                Pomodoro Giallo, Fiordilatte, Olive, Origano
+                Pomodoro Giallo, Fiordilatte, Olive, Olio Evo, Origano
               </p>
             </div>
           </div>
@@ -521,7 +521,7 @@
             <h3 class="dishGrid__item__price">€16</h3>
             <div class="dishGrid__item__text">
               <p>
-                Pomodoro, Fiordilatte, Melanzane Fritte, Grana Origano
+                Pomodoro, Fiordilatte, Melanzane Fritte, Grana, Origano
               </p>
             </div>
           </div>
@@ -581,7 +581,7 @@
             <h3 class="dishGrid__item__price">€17</h3>
             <div class="dishGrid__item__text">
               <p>
-                Pomodoro, Fiordilatte, Porcini, Crudo, Sceglie di Grana
+                Pomodoro, Fiordilatte, Porcini, Crudo, Scaglie di Grana
               </p>
             </div>
           </div>
@@ -821,7 +821,7 @@
             <h3 class="dishGrid__item__price">€17</h3>
             <div class="dishGrid__item__text">
               <p>
-                Pomodoro, Fiordilatte, SPianata Piccante, Cipolla, Olive, Funghi Freschi, Gorgonzola, Origano, Olio al Peperoncino
+                Pomodoro, Fiordilatte, Spianata Piccante, Cipolla, Olive, Funghi Freschi, Gorgonzola, Origano, Olio al Peperoncino
               </p>
             </div>
           </div>
@@ -836,7 +836,7 @@
             <h3 class="dishGrid__item__title">
               Tonno
             </h3>
-            <h3 class="dishGrid__item__price">€7</h3>
+            <h3 class="dishGrid__item__price">€6.50</h3>
             <h3 class="dishGrid__item__price"> / </h3>
             <h3 class="dishGrid__item__price">€15</h3>
             <div class="dishGrid__item__text">
@@ -856,7 +856,7 @@
             <h3 class="dishGrid__item__title">
               Varesotta
             </h3>
-            <h3 class="dishGrid__item__price">€7</h3>
+            <h3 class="dishGrid__item__price">€7.50</h3>
             <h3 class="dishGrid__item__price"> / </h3>
             <h3 class="dishGrid__item__price">€17</h3>
             <div class="dishGrid__item__text">
@@ -1090,7 +1090,7 @@
   <section id="cremoseDishes" data-aos="fade-up">
     <div class="container">
       <h2 class="dishGrid__title">
-        Pizze Speciali
+        Pizze Cremose
       </h2>
       <div class="dishGrid__wrapper">
 
@@ -1149,7 +1149,7 @@
           <h3 class="dishGrid__item__price">€22</h3>
           <div class="dishGrid__item__text">
             <p>
-              Crema di Zucca, Fiordilatte, Funghi Porcini, Capocollo, Fonduta di Grana Padano, Semi di cCia, Olio Evo, Basilico
+              Crema di Zucca, Fiordilatte, Funghi Porcini, Capocollo, Fonduta di Grana Padano, Semi di Chia, Olio Evo, Basilico
             </p>
           </div>
         </div>
@@ -1219,11 +1219,97 @@
   </section>
   <!-- End Pizze Cremose Dishes -->
 
+  <!-- Focacce Dishes -->
+  <section id="focacceDishes" data-aos="fade-up">
+    <div class="container">
+      <h2 class="dishGrid__title">
+        Focacce
+      </h2>
+      <div class="dishGrid__wrapper">
+
+        <div class="dishGrid__item">
+          <!--
+          <div class="dishGrid__item__img">
+            <img src="./images/margherita.jpg" alt="food img">
+          </div>
+          -->
+          <div class="dishGrid__item__info">
+            <h3 class="dishGrid__item__title">
+
+            </h3>
+            <h3 class="dishGrid__item__price">€7</h3>
+            <div class="dishGrid__item__text">
+              <p>
+                Mortadella, bufala, pomodoro a fette, pesto di pistacchio, lattuga
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="dishGrid__item">
+          <!--
+          <div class="dishGrid__item__img">
+            <img src="./images/margherita.jpg" alt="food img">
+          </div>
+          -->
+          <div class="dishGrid__item__info">
+            <h3 class="dishGrid__item__title">
+
+            </h3>
+            <h3 class="dishGrid__item__price">€7</h3>
+            <div class="dishGrid__item__text">
+              <p>
+                Fiordilatte, crudo, rucola, ciliegino, scaglie di grana
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="dishGrid__item">
+          <!--
+          <div class="dishGrid__item__img">
+            <img src="./images/margherita.jpg" alt="food img">
+          </div>
+          -->
+          <div class="dishGrid__item__info">
+            <h3 class="dishGrid__item__title">
+
+            </h3>
+            <h3 class="dishGrid__item__price">€6</h3>
+            <div class="dishGrid__item__text">
+              <p>
+                Fiordilatte, prosciutto cotto, pomodoro a fette, lattuga
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="dishGrid__item">
+          <!--
+          <div class="dishGrid__item__img">
+            <img src="./images/margherita.jpg" alt="food img">
+          </div>
+          -->
+          <div class="dishGrid__item__info">
+            <h3 class="dishGrid__item__title">
+
+            </h3>
+            <h3 class="dishGrid__item__price">€6</h3>
+            <div class="dishGrid__item__text">
+              <p>
+                Primosale, acciughe, olive, pepe mero, olio evo
+              </p>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </section>
+  <!-- End Focacce Dishes -->
+
   <!-- Pizze Dolci Dishes -->
   <section id="DolciDishes" data-aos="fade-up">
     <div class="container">
       <h2 class="dishGrid__title">
-        Pizze Speciali
+        Pizze Dolci
       </h2>
       <div class="dishGrid__wrapper">
 
@@ -1240,7 +1326,7 @@
             <h3 class="dishGrid__item__price">€6</h3>
             <div class="dishGrid__item__text">
               <p>
-                Crema di Nutella, Granella di Nocciole, Zucchero a Vvelo
+                Crema di Nutella, Granella di Nocciole, Zucchero a Velo
               </p>
             </div>
           </div>
@@ -1255,7 +1341,7 @@
             <h3 class="dishGrid__item__title">
               Pistacchiella
             </h3>
-            <h3 class="dishGrid__item__price">6</h3>
+            <h3 class="dishGrid__item__price">€6</h3>
             <div class="dishGrid__item__text">
               <p>
                 Crema di Pistacchio, Granella di Pistacchio, Zucchero a Velo
@@ -1269,6 +1355,226 @@
   </section>
   <!-- End Pizze Dolci Dishes -->
 
+  <!-- Fritture Dishes -->
+  <section id="FrittureDishes" data-aos="fade-up">
+    <div class="container">
+      <h2 class="dishGrid__title">
+        Fritture
+      </h2>
+      <div class="dishGrid__wrapper">
+
+        <div class="dishGrid__item">
+          <!--
+          <div class="dishGrid__item__img">
+            <img src="./images/margherita.jpg" alt="food img">
+          </div>
+          -->
+          <div class="dishGrid__item__info">
+            <h3 class="dishGrid__item__title">
+              Arancinette al ragù
+            </h3>
+            <h3 class="dishGrid__item__price">S €4</h3>
+            <h3 class="dishGrid__item__price"> / </h3>
+            <h3 class="dishGrid__item__price">M €5</h3>
+            <h3 class="dishGrid__item__price"> / </h3>
+            <h3 class="dishGrid__item__price">L €7</h3>
+          </div>
+        </div>
+        <div class="dishGrid__item">
+          <!--
+          <div class="dishGrid__item__img">
+            <img src="./images/margherita.jpg" alt="food img">
+          </div>
+          -->
+          <div class="dishGrid__item__info">
+            <h3 class="dishGrid__item__title">
+              Arancinette agli spinaci
+            </h3>
+            <h3 class="dishGrid__item__price">S €4</h3>
+            <h3 class="dishGrid__item__price"> / </h3>
+            <h3 class="dishGrid__item__price">M €5</h3>
+            <h3 class="dishGrid__item__price"> / </h3>
+            <h3 class="dishGrid__item__price">L €7</h3>
+          </div>
+        </div>
+        <div class="dishGrid__item">
+          <!--
+          <div class="dishGrid__item__img">
+            <img src="./images/margherita.jpg" alt="food img">
+          </div>
+          -->
+          <div class="dishGrid__item__info">
+            <h3 class="dishGrid__item__title">
+              Panelle
+            </h3>
+            <h3 class="dishGrid__item__price">S €3</h3>
+            <h3 class="dishGrid__item__price"> / </h3>
+            <h3 class="dishGrid__item__price">M €4</h3>
+            <h3 class="dishGrid__item__price"> / </h3>
+            <h3 class="dishGrid__item__price">L €5</h3>
+          </div>
+        </div>
+        <div class="dishGrid__item">
+          <!--
+          <div class="dishGrid__item__img">
+            <img src="./images/margherita.jpg" alt="food img">
+          </div>
+          -->
+          <div class="dishGrid__item__info">
+            <h3 class="dishGrid__item__title">
+              Crocchette di patate
+            </h3>
+            <h3 class="dishGrid__item__price">S €3.50</h3>
+            <h3 class="dishGrid__item__price"> / </h3>
+            <h3 class="dishGrid__item__price">M €4.50</h3>
+            <h3 class="dishGrid__item__price"> / </h3>
+            <h3 class="dishGrid__item__price">L €6</h3>
+          </div>
+        </div>
+        <div class="dishGrid__item">
+          <!--
+          <div class="dishGrid__item__img">
+            <img src="./images/margherita.jpg" alt="food img">
+          </div>
+          -->
+          <div class="dishGrid__item__info">
+            <h3 class="dishGrid__item__title">
+              Patatine
+            </h3>
+            <h3 class="dishGrid__item__price">S €3</h3>
+            <h3 class="dishGrid__item__price"> / </h3>
+            <h3 class="dishGrid__item__price">M €4</h3>
+            <h3 class="dishGrid__item__price"> / </h3>
+            <h3 class="dishGrid__item__price">L €5</h3>
+          </div>
+        </div>
+        <div class="dishGrid__item">
+          <!--
+          <div class="dishGrid__item__img">
+            <img src="./images/margherita.jpg" alt="food img">
+          </div>
+          -->
+          <div class="dishGrid__item__info">
+            <h3 class="dishGrid__item__title">
+              Fritto Misto
+            </h3>
+            <h3 class="dishGrid__item__price">S €4</h3>
+            <h3 class="dishGrid__item__price"> / </h3>
+            <h3 class="dishGrid__item__price">M €5</h3>
+            <h3 class="dishGrid__item__price"> / </h3>
+            <h3 class="dishGrid__item__price">L €7</h3>
+            <div class="dishGrid__item__text">
+              <p>
+                Patatine, Crocchette, Panelle
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="dishGrid__item">
+          <!--
+          <div class="dishGrid__item__img">
+            <img src="./images/margherita.jpg" alt="food img">
+          </div>
+          -->
+          <div class="dishGrid__item__info">
+            <h3 class="dishGrid__item__title">
+              Polpettine in Agrodolce
+            </h3>
+            <h3 class="dishGrid__item__price">S €4</h3>
+            <h3 class="dishGrid__item__price"> / </h3>
+            <h3 class="dishGrid__item__price">M €6</h3>
+            <h3 class="dishGrid__item__price"> / </h3>
+            <h3 class="dishGrid__item__price">L €8</h3>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </section>
+  <!-- End Fritture Dishes -->
+
+  <!-- Descrizione -->
+  <section id="Descrizione" data-aos="fade-up">
+    <div class="container">
+      <h2 class="dishGrid__title">
+        Dettagli
+      </h2>
+      <div class="dishGrid__wrapper">
+
+        <div class="dishGrid__item">
+          <!--
+          <div class="dishGrid__item__img">
+            <img src="./images/margherita.jpg" alt="food img">
+          </div>
+          -->
+          <div class="dishGrid__item__info">
+            <h3 class="dishGrid__item__title">
+              Aromi:
+            </h3>
+            <div class="dishGrid__item__text">
+              <p>
+                sale iodato, pepe, origano, prezzemolo, rosmarino, basilico, olio evo
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="dishGrid__item">
+          <!--
+          <div class="dishGrid__item__img">
+            <img src="./images/margherita.jpg" alt="food img">
+          </div>
+          -->
+          <div class="dishGrid__item__info">
+            <h3 class="dishGrid__item__title">
+              *
+            </h3>
+            <div class="dishGrid__item__text">
+              <p>
+                Alcuni prodotti potrebbero essere congelati/surgelati in base al periodo e alla disponibilità del mercato
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="dishGrid__item">
+          <!--
+          <div class="dishGrid__item__img">
+            <img src="./images/margherita.jpg" alt="food img">
+          </div>
+          -->
+          <div class="dishGrid__item__info">
+            <h3 class="dishGrid__item__title">
+              Supplementi:
+            </h3>
+            <div class="dishGrid__item__text">
+              <p>
+                I supplementi variano da €0,50 a €3,00
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="dishGrid__item">
+          <!--
+          <div class="dishGrid__item__img">
+            <img src="./images/margherita.jpg" alt="food img">
+          </div>
+          -->
+          <div class="dishGrid__item__info">
+            <h3 class="dishGrid__item__title">
+              Pizza Baby
+            </h3>
+            <div class="dishGrid__item__text">
+              <p>
+                I supplementi variano da €0,50 a €3,00
+              </p>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </section>
+  <!-- End Descrizione -->
+
   <!-- Footer -->
   <footer>
     <div class="container">
@@ -1278,8 +1584,9 @@
             <img src="./images/logo.svg" alt="l'angolo della pizza. logo">
           </div>
           <p class="footer__desc">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-            ut labore et dolore magna aliqua.
+            Tutto ebbe inizio molti anni fa, con una sfida buttata lì per caso. Poi la passione per quel disco di
+            pasta e l' esigenza di imparare un mestiere, ha fatto sì che oggi si realizzasse, con non pochi sacrifici,
+            un progetto diventato realtà.
           </p>
           <div class="footer__socials">
             <h4 class="footer__socials__title">Seguici sui nostri Social</h4>
@@ -1319,13 +1626,7 @@
               <a href="./menu.html">Menu</a>
             </li>
             <li>
-              <a href="./about.html">La Pizzeria</a>
-            </li>
-            <li>
               <a href="./contact.html">Contattaci</a>
-            </li>
-            <li>
-              <a href="#">Privacy Policy</a>
             </li>
           </ol>
         </div>
@@ -1335,13 +1636,13 @@
           </h3>
           <ol class="footer__text">
             <li>
-              <a href="#">+39 123 123 1234</a>
+              <a href="tel:3343460259">334 346 0259</a>
             </li>
             <li>
-              <a href="#">contatti@angolodellapizza.com</a>
+              <a href="mailto: langolodellapizza20@libero.it">langolodellapizza20@libero.it</a>
             </li>
             <li>
-              <a href="#">Via Carlo Darwin, 28, Aragona(AG), 92021</a>
+              <a href="https://goo.gl/maps/gVg9PVGz4qFqjuDx9">Via Enrico La Loggia, 20, Aragona</a>
             </li>
           </ol>
         </div>
