--- a/menu.html
+++ b/menu.html
@@ -1592,7 +1592,7 @@
             <h4 class="footer__socials__title">Seguici sui nostri Social</h4>
             <ol class="footer__socials__list">
               <li>
-                <a href="https://it-it.facebook.com/" target="_blank">
+                <a href="https://www.facebook.com/profile.php?id=100088035340689" target="_blank">
                   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                        stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round"
                        class="feather feather-facebook">
@@ -1601,7 +1601,7 @@
                 </a>
               </li>
               <li>
-                <a href="https://www.instagram.com/" target="_blank">
+                <a href="https://instagram.com/langolo_della_pizza_aragona?igshid=YmMyMTA2M2Y=" target="_blank">
                   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                        stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round"
                        class="feather feather-instagram">
@@ -1637,6 +1637,9 @@
           <ol class="footer__text">
             <li>
               <a href="tel:3343460259">+39 334 346 0259</a>
+            </li>
+            <li>
+              <a href="https://wa.me/3343460259">WhatsApp</a>
             </li>
             <li>
               <a href="mailto: langolodellapizza20@libero.it">langolodellapizza20@libero.it</a>
