--- a/index.html
+++ b/index.html
@@ -96,13 +96,13 @@
             <img src="./images/wall-clock-icon.svg" alt="clock icon">
           </div>
           <h3 class="storeInfo__title">
-            10 AM - 7 PM
+            LUN-VEN 18:30-22:30
+          </h3>
+          <h3 class="storeInfo__title">
+            SAB-DOM 18:30-00:00
           </h3>
           <p class="storeInfo__text">
-            Aperto tutti i giorni,
-          </p>
-          <p class="storeInfo__text">
-            chiuso il mercoledì
+            Chiuso il mercoledì
           </p>
         </div>
         <div class="storeInfo__item">
