--- a/index.html
+++ b/index.html
@@ -135,6 +135,20 @@
         </div>
         <div class="storeInfo__item">
           <div class="storeInfo__icon">
+            <img src="./images/fisso.svg" alt="clock icon">
+          </div>
+          <h3 class="storeInfo__title">
+            0922 836 811
+          </h3>
+          <p class="storeInfo__text">
+            Chiamaci Adesso
+          </p>
+          <br>
+          <br>
+          <a href="tel:0922836811" class="btn primary-btn" >Chiamaci Ora</a>
+        </div>
+        <div class="storeInfo__item">
+          <div class="storeInfo__icon">
             <img src="./images/whatsapp.svg" alt="whatsapp icon">
           </div>
           <h3 class="storeInfo__title">
