--- a/menu.html
+++ b/menu.html
@@ -66,9 +66,11 @@
         </h2>
       </div>
       </br>
+      <!--
       <div>
         <a href="./images/menuL'angoloDellaPizza.jpg" class="btn primary-btn" target="_blank">Oppure Scaricalo</a>
       </div>
+      -->
     </div>
   </section>
 
@@ -1565,6 +1567,23 @@
             <div class="dishGrid__item__text">
               <p>
                 Pizza Baby €1.00 in meno
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="dishGrid__item">
+          <!--
+          <div class="dishGrid__item__img">
+            <img src="./images/margherita.jpg" alt="food img">
+          </div>
+          -->
+          <div class="dishGrid__item__info">
+            <h3 class="dishGrid__item__title">
+              Gluten Free
+            </h3>
+            <div class="dishGrid__item__text">
+              <p>
+                Gluten Free a partire da 7€, gusti a piacere
               </p>
             </div>
           </div>
